--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html class="desktop flash svg canvas canvastext cssgradients generatedcontent supports csscolumns csscolumns-width no-csscolumns-span csscolumns-fill csscolumns-gap csscolumns-rule csscolumns-rulecolor csscolumns-rulestyle csscolumns-rulewidth no-csscolumns-breakbefore no-csscolumns-breakafter no-csscolumns-breakinside flexbox no-cssreflections csstransforms csstransforms3d csstransitions no-touchevents" style=""><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <meta charset="UTF-8">
 <meta name="description" content="Web reporting made easy with myDBR. myDBR is an advanced web reporting tool for MySQL, MS SQL Server and Sybase databases">
 <meta name="version" content="5.2.2/3695">
@@ -39,6 +40,7 @@ lang: ""
 <script src="assets/jquery.custom-scrollbar.js"></script>
 
 <style type="text/css">
+
 .content {
     max-width: 100%;
     overflow: hidden;
@@ -52,7 +54,6 @@ lang: ""
 	display: block;
 }
 
-
 .hovermenu_icon.export.oem_export_menu, 
 .hovermenu_icon.export {
 	display: none;
@@ -61,9 +62,7 @@ lang: ""
 #tab_dbr_rt1 .findit {
 	display: block;
 	width: 100%;
-
 }
-
 
 .title {
 	display: none;
@@ -75,12 +74,12 @@ div.box_fixed {
 
 #tab_dbr_rt1 .findit {
 	display: block;
-	margin: 15px 20px 0;
+	margin: 15px 40px 0;
 	border: 1px solid #fff;
 	line-height: 30px;
 	border-radius: 30px;
 	padding: 5px 20px;
-	max-width: calc(100% - 40px);
+	max-width: calc(100% - 80px);
 }
 
 body {
@@ -88,8 +87,9 @@ body {
     margin: 0 20px;
 }
 
-.tableFloatingHeaderOriginal, .tableFloatingHeaderOriginal .row_header {
-	background-color: transparent;
+.tableFloatingHeaderOriginal, 
+.tableFloatingHeaderOriginal .row_header {
+	background-color: #EFF0F5;
 }
 
 .tableFloatingHeaderOriginal .row_header th {
@@ -102,6 +102,10 @@ body {
 
 .tableFloatingHeaderOriginal .row_header th:first-child {
 	border-top-left-radius: 10px;
+}
+
+.tableFloatingHeaderOriginal .row_header th:last-child {
+	border-top-right-radius: 10px;
 }
 
 .scroll-bar.horizontal {
@@ -121,7 +125,6 @@ body {
 	height: 20px;
 	background-color: #9992C7;
 	border-radius: 40px;
-
 }
 
 .bt-scroller {
@@ -137,19 +140,21 @@ body {
 }
 
 #rightScroller {
-	float: right;
-	margin-top: 12px;
-	padding-right: 5px;
-	cursor: pointer;
-	display: block;
+    float: right;
+    margin-top: 8px;
+    padding-right: 5px;
+    cursor: pointer;
+    display: block;
+    padding: 5px 7px;
 }
 
 #leftScroller {
 	float: left;
-	margin-top: 12px;
+    margin-top: 8px;
 	padding-left: 5px;
 	cursor: pointer;
 	display: block;
+    padding: 5px 7px;
 }
 
 .scrollable .viewport {
@@ -157,57 +162,357 @@ body {
 }
 
 #topScroller {
-    top: -14px;
+    top: -22px;
     position: absolute;
+    cursor: pointer;
+    display: block;
+    left: calc(50% - 20px);
+    padding: 5px 10px;
+}
+
+#dbr_rt1 caption{
+    position: fixed;
+    background:  #EFF0F5;
+    top: 0;
+    width: 100%;
+    left: 0;
+    z-index: 999;
+    height: 78px;
+    padding-bottom: 0px;
+}
+
+#dbr_rt1 {
+	margin-top: 80px;
+}
+
+#top_filters {
+	top: -999px;
+	z-index: 9999;
+	background-color: #253A7B;
+	position: fixed;
+	left: 0;
+	right: 0;
+	padding: 15px;
+	transition: all 0.5s ease-in;
+}
+
+#top_filters button {
+	background: #fff;
+	border: 1px solid #fff;
+	padding: 10px 10px;
+	border-radius: 20px;
+	margin-top: 10px;
+	color: #122960;
+	width: 47%;
 	cursor: pointer;
+	margin: 10px 1%;
+	font-size: 13px;
+	font-weight: 600;
+}
+
+#top_filters button.inactive {
+	background-color: transparent;
+	font-size: 12px;
+	color: #fff;
+	font-weight: normal;
+}
+
+#top_filters.open {
+	top: 0px !important;
+}
+
+#top_filters .handler {
+	background: #253A7B;
+	bottom: -17px;
+	width: 40px;
+	height: 40px;
+	position: absolute;
+	right: 8px;
+	border-radius: 50%;
+	line-height: 57px;
+	text-align: center;
+	cursor: pointer;
+	color: #fff;
+	font-size: 12px;
+}
+
+#top_filters.open .handler .closer, 
+#top_filters .handler .opener{
+	display: inline-block;
+}
+
+#top_filters.open .handler .opener, 
+#top_filters .handler .closer{
+	display: none;
+}
+
+#thead_clone {
+	position: fixed;
+	top: 78px;
+	left: 20px;
+	right: 20px;
+	overflow: hidden;
+	background-color: #EFF0F5;
+} 
+
+#thead_clone .inner {
+	position: absolute;
+	background-color: #9992C8;
+	padding-top: 6px;
+}
+
+#thead_clone .inner div {
+	display: table-cell;
+	padding: 3px 7px 4px;
+	color: #fff;
+	float: left; 
+	font-weight: 700;
+	height: calc(100% - 9px);
+	vertical-align: middle;
+}
+
+#thead_clone .inner {
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+}
+.inline-edit {
+	position: relative;
+}
+
+.inline-edit-area {
+	border: 1px solid #dedede;
+	padding: 4px 0px 0px 8px;
+	border-top-right-radius: 10px;
+	position: absolute;
+	background-color: #E5E3F1;
+	top: 3px;
+	left: 0;
+	width: 160px;
+	z-index: 999;
+	border-bottom-right-radius: 10px;
+}
+
+.inline-edit-area input{
+	max-width: 90px;
+	background-color: #E5E3F1;
+	border: none;
+	float: left;
+}
+
+.verify_bg {
+	background: #3FD969;
+	width: 50px;
+	height: 30px;
+	float: right;
+	margin-top: -5px;
+	text-align: center;
+	border-bottom-right-radius: 10px;
+	border-top-right-radius: 10px;
+}
+
+.verify_bg .verify {
+	margin-top: 4px;
+	width: 20px;
+	height: 20px;
+	background: #F6F7F9;
+	border-radius: 50%;
+	border: none;
+	font-size: 12px;
+	text-align: center;
+	line-height: 20px;
+	padding: 0px;
+	color: #3FD969;
+	cursor: pointer;
+	display: inline-block;
+}
+
+
+i.arrow {
+    border: solid #fff;
+    border-width: 0 2px 2px 0;
+    display: inline-block;
+    padding: 2px;
+}
+
+i.arrow.right {
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+}
+
+i.arrow.left {
+    transform: rotate(135deg);
+    -webkit-transform: rotate(135deg);
+}
+
+i.arrow.up {
+    transform: rotate(-135deg);
+    -webkit-transform: rotate(-135deg);
+}
+
+i.arrow.down {
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
 }
 </style>
 
 <script type="text/javascript">
+	
 	jQuery(document).ready(function($) {
-		function refreshSize() {
+		//Generating Top Column Filters
+		$("body").append('<div id="top_filters"><div class="handler"><span class="opener"><i class="arrow down"></i></span><span class="closer"><i class="arrow up"></i></span></div></div>');
+		var topFilters = $("body").find("#top_filters");
 
-			$("body").append('<div class="bt-scroller"><span id="rightScroller">&#x25B6;</span><span id="leftScroller">&#x25C0;</span><center><span id="topScroller">&#x25BC;</span></center></div><div id="custom_css"></div>');
-			
+		//Top Filters Handler
+		$(topFilters).on('click', '.handler', function(event) {
+			event.preventDefault();
+			$(topFilters).toggleClass('open');
+			$('#dbr_rt1').toggleClass('filter_open');
+			$(".divTableWithFloatingHeader .divTableWithFloatingHeader").customScrollbar("scrollToY", 0);
+			$("body").find("#thead_clone").toggle();
+		});
+
+		//Generating Column Buttons
+		$("body").find(".tableFloatingHeaderOriginal:eq(1) .row_header th").each(function(index, el) {
+			$(topFilters).append('<button data-col="'+(index+1)+'" class="col_hide">'+$(this).text()+'</button>');
+		});
+
+		//Filters initial position
+		$(topFilters).css("top", "-" + $(topFilters).height()-25 + "px");
+
+		//Push Table Bottom when filters are opened
+		$("body").append("<style> .filter_open { margin-top: " + ($(topFilters).height()+60) + "px !important;} </style>");
+
+		//Column Filtering 
+		$("body").on('click', '.col_hide', function(event) {
+			event.preventDefault();
+			$(this).toggleClass('inactive');
+			$('#dbr_rt1 tr > *:nth-child('+$(this).data('col')+')').toggle();
+			$('.inner > *:nth-child('+$(this).data('col')+')', thead_clone).toggle();
+			refreshScrollbar();
+		});
+
+		//Inline Editing
+		$('#dbr_rt1 tbody td').addClass('inline-edit');
+
+		//Table Head Clone for Fixed Table Header
+		$("body").append('<div id="thead_clone"><div class="inner"></div></div>');
+		var theadClone = $("body").find("#thead_clone");
+
+		//Generating Duplicate Fixed Table Headers
+		$("body").find(".tableFloatingHeaderOriginal:eq(1) .row_header th").each(function(index, el) {
+			$(".inner", theadClone).append('<div data-col="'+(index+1)+'" class="" style="width:'+$(this).width()+'px">'+$(this).text()+'</div>');
+		});
+
+		//Scroller Arrows
+		$("body").append('<div class="bt-scroller"><span id="rightScroller">&#x25B6;</span><span id="leftScroller">&#x25C0;</span><center><span id="topScroller">&#x25BC;</span></center></div><div id="custom_css"></div>');
+
+		//Window Resize Handler
+		function refreshSize() {
 			screenWidth = $(window).width();
 			screenHeight = $(window).height();
+
+			//Hide Scrollers if screen size is enough for content
 			if(screenWidth-40 > $("#dbr_rt1").width()) {
 				$(".scroll-bar.horizontal, .bt-scroller").hide();
+			} else {
+				$(".scroll-bar.horizontal, .bt-scroller").show();
 			}
 
+			//Fixing top Height
 			$(".max_height, .content").height(screenHeight-60 + "px");
-			$("body").find('#custom_css').append("<style>.scroll-bar.horizontal { max-width: " + (screenWidth-100) + "px; </style>");
+			
+			//Custom Css on runtime
+			$("body").find('#custom_css').html("<style>.scroll-bar.horizontal { max-width: " + (screenWidth-100) + "px; </style>");
 
+			//Top Search Size
 			$("#tab_dbr_rt1").width(screenWidth-40 + "px");
-		}
 
+			//Table Header Resizing 
+			$(".inner", theadClone).width($(".tableFloatingHeaderOriginal:eq(1) .row_header").width() + "px");
+			$(".inner", theadClone).height($(".tableFloatingHeaderOriginal:eq(1) .row_header").height() + "px")
+			$(".tableFloatingHeaderOriginal:eq(1) .row_header").height($(".inner", theadClone).height() + "px");
+			$(theadClone).height($(".tableFloatingHeaderOriginal:eq(1) .row_header").height() + "px");
+
+			//Managing Clone Header Size according to Table Header
+			$("body").find(".tableFloatingHeaderOriginal:eq(1) .row_header th").each(function(index, el) {
+				$(".inner div:eq("+index+")", theadClone).width($(this).width()+'px');
+			});
+
+			$(".inner", theadClone).css("left", $("body").find(".overview").css("left"));
+		}
 		$(window).resize(refreshSize);
 
+		//Refresh Scrollbar on changing the content size
+		function refreshScrollbar() {
+			$(".divTableWithFloatingHeader .divTableWithFloatingHeader").customScrollbar("resize", true);
+		}
+		$(".divTableWithFloatingHeader").on("change", refreshScrollbar);
+
+		//Window Resize Handler. Initializing
 		refreshSize();
 
-		$(".divTableWithFloatingHeader .divTableWithFloatingHeader").customScrollbar({
-			updateOnWindowResize: true,
-			vScroll: true,
-			hScroll: true
-		 });
+		//Custom Scroll Initializer. Waiting to load the all content and styles
+		setTimeout(function() {
+			$(".divTableWithFloatingHeader .divTableWithFloatingHeader").customScrollbar({
+				updateOnWindowResize: true,
+				vScroll: true,
+				hScroll: true,
+				onCustomScroll: function(event, scrollData) {
+					$(".inner", theadClone).css("left", $("body").find(".overview").css("left"));
+				}
+			 });
+		}, 300);
 
+		//Right Arrow Scroll Function
 		$("body").on('click', '#rightScroller', function(event) {
-			
 			$(".divTableWithFloatingHeader .divTableWithFloatingHeader").customScrollbar("scrollByX", 200);
+			setTimeout(function() {
+				$(".inner", theadClone).css("left", $("body").find(".overview").css("left"));
+			}, 250);
 		});
 
+		//Left Arrow Scroll Function
 		$("body").on('click', '#leftScroller', function(event) {
 			$(".divTableWithFloatingHeader .divTableWithFloatingHeader").customScrollbar("scrollByX", -200);
+			setTimeout(function() {
+				$(".inner", theadClone).css("left", $("body").find(".overview").css("left"));
+			}, 300);
 		});
 		
+
+		//Bottom Arrow Scroll Function
 		$("body").on('click', '#topScroller', function(event) {
 			$(".divTableWithFloatingHeader .divTableWithFloatingHeader").customScrollbar("scrollByY", 200);
 		});
+		
+		//Inline Editing.
+		$("body").on('click touch', '.inline-edit', function(event) {
+			event.preventDefault();
+			var target = $(event.target);
 
+			//Save the data 
+			if(target.is(".verify")) {
+				var editArea = $(this).find('.inline-edit-area');
+				var orgElm = $(this);
+				$(orgElm).html($(editArea).find("input").val());
+				$(orgElm).removeClass('editing');
+				return;
+			}
+
+			//Already in Editing Mode
+			if($(this).hasClass('editing'))
+				return false;
+
+			//Generate Editing Layout
+			$(this).addClass('editing');
+			var oldText = $(this).text();
+			$(this).html('<div class="inline-edit-area"><input type="text" value="'+oldText+'"><div class="verify_bg"><button class="verify">&#10003;</button></div></div>');
+		});
 	});
 </script>
-
 <!-- END Extra Assets Javascript & Styles -->
+
+
 <style type="text/css">.jqstooltip { position: absolute;left: 0px;top: 0px;visibility: hidden;background: rgb(0, 0, 0) transparent;background-color: rgba(0,0,0,0.6);filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000);-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000)";color: white;font: 10px arial, san serif;text-align: left;white-space: nowrap;padding: 5px;border: 1px solid white;z-index: 10000;}.jqsfield { color: white;font: 10px arial, san serif;text-align: left;}</style></head>
 <body class="report">
 <ul class="hovermenu_icon export oem_export_menu"><li><ul class="hovermenu exportmenu right" style="display: none;"><li class="excel"><a href="http://34.197.159.58/mydbr/report.php?r=64&amp;m=10&amp;h=57cab0634630bda3fd192ce4e55b0e3c8e3c61df&amp;i=1&amp;export=xlsx">Excel</a></li><li class="pdf"><a href="http://34.197.159.58/mydbr/report.php?r=64&amp;m=10&amp;h=57cab0634630bda3fd192ce4e55b0e3c8e3c61df&amp;i=1&amp;export=pdf">PDF</a></li><li class="csv lastchild"><a href="http://34.197.159.58/mydbr/report.php?r=64&amp;m=10&amp;h=57cab0634630bda3fd192ce4e55b0e3c8e3c61df&amp;i=1&amp;export=csv">CSV</a></li></ul></li></ul><div class="content report_64">
